# lazy-pbrt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RTNW.ppm  RTOW.ppm  RTRL.ppm  camera.cpp  camera.h  color.cpp  color.h  index.md  interval.cpp  interval.h  main.cpp  material.cpp  material.h  primitive.h  ray.h  scene_note.cpp  sphere.cpp  sphere.h  tags  test.cpp  types.h  vec3.h  world.h
accel/: bvh.cpp  bvh.h
core/: camera.cpp  camera.h  color.h  hitable.h  hitrecord.h  hittable.h  hittablelist.cpp  hittablelist.h  image.h  interval.cpp  interval.h  light.h  material.h  onb.h  random.cpp  random.h  ray.h  scene.h  texture.h  types.h
ext/: CMakeLists.txt
ext/Metal/: CMakeLists.txt
ext/stb/: CMakeLists.txt
include/accel/: bvh.hpp
include/core/: aabb.hpp  camera.hpp  geometry.hpp  hitrecord.hpp  hittable.hpp  hittablelist.hpp  image.hpp  integrator.hpp  material.hpp  materials.hpp  mesh.hpp  onb.hpp  pdf.hpp  perlin.h  rng.hpp  sample.hpp  scene.hpp  texture.hpp  types.hpp
include/integrator/: path.hpp  pm.hpp
include/shapes/: quad.hpp  sphere.hpp  triangle.hpp
integrator/: integrator.h  path.cpp  path.h
lights/: diffuse.h
material/: constantmedium.cpp  constantmedium.h  dielectric.cpp  dielectric.h  isotropic.h  lambertian.cpp  lambertian.h  metal.cpp  metal.h
math/: aabb.cpp  aabb.h  pdf.h  perlin.cpp  perlin.h  vec3.h
nanogi/: camera.hpp  data.hpp  material.hpp  nanogi.hpp  random.hpp  scene.hpp  shape.hpp
old/: CMakeLists.txt  aabb.cpp  aabb.h  camera.cpp  hit_record.h  interval.h  material.cpp  material.h  ray.h  world.cpp
shapes/: quad.cpp  quad.h  sphere.cpp  sphere.h
